--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@babel/cli": "^7.1.0",
 		"@babel/core": "^7.1.0",
+		"@babel/plugin-proposal-class-properties": "^7.1.0",
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.2",
@@ -32,6 +33,10 @@
 	},
 	"dependencies": {
 		"react": "^16.6.3",
-		"react-dom": "^16.6.3"
+		"react-dom": "^16.6.3",
+		"react-redux": "^5.1.1",
+		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0",
+		"superagent": "^4.0.0"
 	}
 }
