--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.2",
+		"redux-logger": "^3.0.6",
 		"webpack": "^4.19.1",
 		"webpack-cli": "^3.1.0"
 	},
 	"dependencies": {
+		"connected-react-router": "^5.0.1",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
+		"react-md-spinner": "^0.3.0",
 		"react-redux": "^5.1.1",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"superagent": "^4.0.0"
